Initial commit for weather app

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  background-color: burlywood;
+  margin: auto;
+  max-width: 40vw;
+  padding: 2rem;
+  height: 100vh;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.weather-row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 150%;
 }
 
-.App-link {
-  color: #61dafb;
+.weather-row > * {
+  flex: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 400px) {
+  .weather-row {
+    display: block;
   }
-  to {
-    transform: rotate(360deg);
+
+  .weather-row > * {
+    padding: 10px;
+  }
+
+  .container {
+    margin: auto;
+    max-width: 75vw;
+    padding: 2rem;
   }
 }
