--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,11 @@
 .weather-row {
   display: flex;
   font-size: 150%;
+  margin-bottom: 3rem;
 }
 
 .weather-row > * {
   flex: 1;
-  margin-bottom: 15px;
 }
 
 @media (max-width: 800px) {
